SERVER-8921 Improve error message for invalid text index spec