src/mongo/db/fts/fts_spec.cpp
@@ -32,6 +32,9 @@ namespace mongo {
         const double MAX_WORD_WEIGHT = MAX_WEIGHT / 10000;
 
         FTSSpec::FTSSpec( const BSONObj& indexInfo ) {
+            massert( 16739, "found invalid spec for text index",
+                     indexInfo.hasField("weights") );
+
             _defaultLanguage = indexInfo["default_language"].valuestrsafe();
             _languageOverrideField = indexInfo["language_override"].valuestrsafe();
 
